--- a/src/pages/Tempo/styles.css
+++ b/src/pages/Tempo/styles.css
@@ -20,3 +20,7 @@
     justify-content: space-between;
     align-items: center;
 }
+.tempo-container .content section h1{
+    margin: 64px 0 32px;
+    font-size: 32px;
+}
